added anim for button onclick, might remove if too detering

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body>
   <div class="container light-theme" id="container">
 
-    <button class="theme-button" onclick="toggleTheme()">L/D</button>
+    <div class="theme-button" id="button-anim"></div>
+    <button class="theme-button" onclick="toggleTheme()" id="theme-button">Dark</button>
     <!-- TODO: 
           - Animate Button onclick
     -->
@@ -43,7 +44,7 @@
           <li><a class="nodejs" href="https://nodejs.org/">Node.js</a></li>
           <li><a class="pyt" href="https://www.python.org/">Pyt</a><a class="hon" href="https://www.python.org/">hon</a></li>
           <li><a class="flask" href="https://palletsprojects.com/p/flask/">Flask</a> </li>
-          <li><a class="vs" href="">VS Studio Code</a></li>
+          <li><a class="vs" href="https://code.visualstudio.com/">VS Studio Code</a></li>
         </ul>
       </section>
   
