changed parts of innerhtml and fixed contact at footer

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <title>Adrian De Guzman</title>
 </head>
-<body class="light-theme" id="body" onload="setTheme(); updateTime();">
+<body id="body" onload="setTheme(); updateTime();">
   <div class="container" id="container">
 
     <div class="theme-button" id="button-anim"></div>
@@ -71,12 +71,17 @@
             > Display 2 card per line in +
         -->
       </section>
+      <p>
+      Want to see more?<br>
+      Check out the rest of my projects on <a href="https://github.com/milkndcoffee?tab=repositories">Github</a>.
+      </p>
+
     </main>
     <hr>
     
     <footer>
-      <p>made w/ luv</p>
-      <a href="mailto:milkndcoffee@gmail.com">milkndcoffee@gmail.com</a>
+      <p>Contact me @</p>
+      <a href="mailto:adrianmaurel@gmail.com">adrianmaurel@gmail.com</a>
     </footer>
   </div>
 </body>
