--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
     <hr>
 
     <footer>
-      <p>Contact me @</p>
-      <a href="mailto:adrianmaurel@gmail.com">adrianmaurel@gmail.com</a>
+      <p>Contact me:</p>
+      <a href="mailto:hello@adeguzm.com">hello@adeguzm.com</a>
     </footer>
   </div>
 </body>
