changed pic back to placeholder

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <strong>web development</strong>.
           </p>
           <div class="img-container">
-            <img src="img/profile-pic.jpg" alt="profile-pic" style="background-color: gray;" />
+            <img src="img/placeholder-pic.jpg" alt="profile-pic" style="background-color: gray;" />
           </div>
         </div>
       </div>
